--- a/css/layout.css
+++ b/css/layout.css
@@ -15,8 +15,15 @@ body,
   background-position: center;
 }
 
+.wrap {
+  padding-top: 81px;
+}
+
 /* ------ header ------  */
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 80px;
   border-bottom: 1px solid #d8d8d8;
@@ -108,9 +115,6 @@ body,
 }
 
 .fp-back .header {
-  position: fixed;
-  top: 0;
-  left: 0;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   background-color: rgba(0, 0, 0, 0.2);
 }
@@ -779,8 +783,12 @@ a.btn {
 }
 
 @media screen and (max-width: 768px) {
+  .wrap {
+    padding-top: 61px;
+  }
+
   .header {
-    height: 61px;
+    height: 60px;
   }
 
   .header.active {
@@ -1119,6 +1127,10 @@ a.btn {
 
   .pop-wrap .popup .title {
     margin-bottom: 30px;
+  }
+
+  .pop-wrap .prev-slide .title {
+    margin-bottom: 14px;
   }
 
   .pop-wrap .popup .title h2 {
