--- a/skin/css/skin.css
+++ b/skin/css/skin.css
@@ -640,15 +640,15 @@ textarea::placeholder {
   bottom: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, .5);
+  background: rgba(0, 0, 0, .8);
   z-index: 100;
 }
 
 .view-box-wrap .view-box {
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 100%;
   max-width: 750px;
   margin: 0 auto;
@@ -659,11 +659,15 @@ textarea::placeholder {
 .view-box-wrap img {
   display: block;
   width: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .view-close {
   overflow: hidden;
-  position: relative;
+  position: absolute;
+  top: 21px;
+  right: 21px;
   margin-bottom: 4rem;
   border: 0;
   width: 6.4rem;
